# pr_guard

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  comparison_coderabbit.md  docker-compose.yml  example_response.md  install.ps1  install.sh  main.py  pyproject.toml  test_output.py
.github/workflows/: pr_review.yml
documentation/: architecture.md  handoff_deck.md  qa_guide.md  setup_guide.md
src/: agent.py  api.py  config.py  model.py  prompt.py  tools.py
src/pr_guard/: agent.py  api.py  cli.py  config.py  model.py  prompt.py  tools.py
src/pr_guard/api/: main.py  utils.py
src/pr_guard/cli/: __init__.py  logging_config.py  main.py  utils.py
src/pr_guard/cli/utils/: __init__.py  chat.py  env.py  init_setup.py  pr.py  repo.py  review.py  terminal.py
src/pr_guard/logic/: review_generator.py
src/pr_guard/schema/: api_schema.py  response.py  tool_schema.py
src/pr_guard/utils/: git_utils.py  github_utils.py  tool_utils.py
src/schema/: response.py  tool_schema.py
src/utils/: git_utils.py
tests/: test_tools.py
vsc-extension/: CHAT_INTEGRATION.md  LICENSE.md  QUICK_START.md  README.md  help.txt  package-lock.json  package.json
vsc-extension/src/: SidebarProvider.ts  extension.ts  webviewContent.ts
vsc-extension/src/api/: ApiClient.ts
vsc-extension/src/services/: ServerManager.ts
vsc-extension/src/utils/: common.ts
vsc-extension/src/view/: SimpleReportGenerator.ts  WebviewContent.ts  webview.css  webview.js
