[project]
name = "pr-guard"
version = "0.1.0"
description = "AI-powered Pull Request Reviewer and Guard"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["ai", "git", "pr", "review", "automation"]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "typer>=0.21.0",
    "uvicorn>=0.40.0",
    "httpx>=0.27.0",
    "langchain-xai>=1.2.1",
    "langchain-anthropic>=1.3.1",
    "langchain-google-genai>=4.2.0",
]

[project.scripts]
pr-guard = "pr_guard.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
